add some styles for buttons, forms, change root to questions#index

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -3,12 +3,12 @@
 
     <%= form_with model: @question do |form| %>
     <p><%= form.label :body, 'Write the question:' %></p>
-    <p><%= form.text_area :body, rows: 5 %></p>
+    <p><%= form.text_area :body, rows: 5, class: "form-text-area"%></p>
 
-    <p class="mt"><%= form.label :user_id, 'User id:' %></p>
-    <p><%= form.text_field :user_id %></p>
+    <p class="mt"><%= form.label :user_id, 'User id:'%></p>
+    <p><%= form.text_field :user_id, class: "form-text-field"  %></p>
 
-    <p class="mt"><%= form.submit 'Edit' %></p>
+    <p class="mt"><%= form.submit 'Edit' , class: "button button-main" %></p>
 
     <% end %>
 </div>
