--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,5 +5,7 @@
         <p class="mt-sm"><%= link_to "Question #{question.id}", question_path(question) %></p>
     <% end %>
 
-    <p class="mt"> <%= link_to 'Create new question', new_question_path %> </p>
+    <p class="mt"> 
+        <%= link_to 'Create new question', new_question_path, class: "button button-main" %> 
+    </p>
 </div>
