--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,14 +1,6 @@
 <div class="container"> 
     <h2 class="title-lg mb">Edit question <%= @question.id %></h2>
 
-    <%= form_with model: @question do |form| %>
-    <p><%= form.label :body, 'Write the question:' %></p>
-    <p><%= form.text_area :body, rows: 5, class: "form-text-area"%></p>
-
-    <p class="mt"><%= form.label :user_id, 'User id:'%></p>
-    <p><%= form.text_field :user_id, class: "form-text-field"  %></p>
-
-    <p class="mt"><%= form.submit 'Edit' , class: "button button-main" %></p>
-
-    <% end %>
+    <%= render 'form' %>
+  
 </div>
