--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container"> 
     <h2 class="title-lg mb">Edit question <%= @question.id %></h2>
 
-    <%= render 'form' %>
+    <%= render 'form', question: @question %>
   
 </div>
