--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container"> 
     <h2 class="title-lg mb">New question </h2>
 
-    <%= render 'form' %>
+    <%= render 'form', question: @question %>
 </div>
