create question partial

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,4 +8,8 @@
     <p class="mt"> 
         <%= link_to 'Create new question', new_question_path, class: "button button-main" %> 
     </p>
+
+  <p class="mt">
+    <%= render 'form', question: @question  %>
+  </p>
 </div>
