--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,13 +1,7 @@
 <div class="container"> 
     <h2 class="title-lg mb">Question: <%= @question.id %></h2>
 
-    <p class="mb-sm"><%= @question.body %></p>
-    <p>User id: <b><%= @question.user_id%></b> </p>
-
-    <div class="mt"> 
-        <%= link_to fa_icon('pencil'), edit_question_path(@question), title: 'edit question' %>
-        <%= button_to  fa_icon('trash-o'), question_path(@question), method: :delete, title: 'delete question' %> 
-    </div>
+    <%= render 'question', question: @question %>
 
     <p class="mt"><%= link_to "All Questions", questions_path , class: "button button-main" %></p>
 </div>
