--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,10 +1,4 @@
-<div class="container"> 
-    <h2 class="title-lg mb">Quesitons:</h2>
-
-    <% @questions.each do |question| %>
-        <p class="mt-sm"><%= link_to "Question #{question.id}", question_path(question) %></p>
-    <% end %>
-
+<div class="container">
     <p class="mt"> 
         <%= link_to 'Create new question', new_question_path, class: "button button-main" %> 
     </p>
@@ -13,3 +7,16 @@
     <%= render 'form', question: @question  %>
   </p>
 </div>
+
+<div class="container mt-sm">
+  <h2 class="title-lg">
+   <%= @questions.count %>
+    <%= inclination(@questions.count, 'question', 'questions') %>
+  </h2>
+</div>
+
+<% @questions.each do |question| %>
+  <div class="mt-sm container">
+    <%= render question %>
+  </div>
+<% end %>
